# resume-tailor

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml  render.yaml
.claude/: settings.json
.claude/agents/: deploy-walker.md  honest-reviewer.md  review-triager.md  slice-splitter.md
.claude/hooks/: pre-commit.sh  session-start.sh  slice-budget.sh
.github/workflows/: ci.yml
api/app/: _browser.py  main.py
api/app/domain/: archetype.py  models.py  parse.py  render.py  tailor.py  tailor_ai.py
api/app/routers/: __init__.py  parse.py  render.py  tailor.py
api/tests/: conftest.py  test_archetype.py  test_parse.py  test_render.py  test_routes.py  test_tailor.py  test_tailor_ai.py
evals/: README.md  check_provenance.py  llm_compare.py  test_check_provenance.py
examples/: README.md  sample-jd.txt  sample-resume.json  tailored.json
prompts/: tailor_system.md
scripts/: build_example.py  build_previews.py
templates/classic/: meta.json  style.css
templates/compact/: meta.json  style.css  template.html.j2
templates/modern/: meta.json  style.css
web/: .env.example  .env.production  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  wrangler.jsonc
web/src/: App.tsx  api.ts  index.css  sampleResume.ts  types.ts
web/src/components/: JdStep.tsx  ResumeStep.tsx  TailorStep.tsx
web/src/hooks/: useLocalStorage.ts
web/src/lib/: dates.ts  ids.ts  parsedToResume.ts
