[project]
name = "resume-tailor-api"
version = "0.1.0"
description = "Resume Tailor backend — FastAPI + Pydantic v2."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "pydantic[email]>=2.9",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
# Each dep is justified in the README. Render-time deps (playwright, jinja2)
# and AI-time deps (openai) land with their respective slices.
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api/app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM"]
ignore = ["E501"]  # line length is enforced by formatter

[tool.ruff.lint.per-file-ignores]
"api/tests/*" = ["N802"]  # test_ names are intentionally not snake_case verbs

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "api"
files = ["api/app"]
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["api/tests"]
pythonpath = ["api"]
addopts = "-q"
